fix(textinput): fixed spacing
affects: @fremtind/jkl-text-input-react, @fremtind/jkl-text-input

--- a/packages/text-input/text-input.scss
+++ b/packages/text-input/text-input.scss
@@ -13,7 +13,6 @@
 
 @mixin raise-label {
     @include label-font-size--raised();
-    line-height: $text-field-size;
     top: 0;
     left: 0;
 }
